# corese-python

./: .coveragerc  .gitignore  CHANGES.md  DESCRIPTION.md  INSTALL.md  README.md  build.gradle.kts  index.html  pyproject.toml  settings.gradle.kts  setup.cfg  setup.py  switcher.json
.github/workflows/: ci.yml  pypi.yml  python.yml  sphinx-dev.yml  sphinx-prod.yml
dev/: .buildinfo  corese.html  dev_install.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
dev/.doctrees/: apis.doctree  corese.doctree  dev_install.doctree  environment.pickle  index.doctree  user_guide.doctree
dev/_modules/: index.html
dev/_sources/: apis.rst.txt
dev/python_api/: index.html
docs/: README.md  requirements.txt  switcher_generator.sh
docs/source/: .gitignore  apis.rst  conf.py  corese.rst  index.rst
examples/: example1.ipynb
feature/retrieve_doc/: .buildinfo  index.html  searchindex.js
gradle/: libs.versions.toml
jupyter_execute/: user_guide.ipynb
main/: .buildinfo  dev_install.html  genindex.html  py-modindex.html
main/.doctrees/: apis.doctree  corese.doctree  dev_install.doctree  environment.pickle  (+2 more)
python_examples/: download.py  example1.ipynb  simple_query.py
tests/: test_jpype_api.py  test_py4j_api.py  test_py4j_run.py
v0.0.0/: .buildinfo  apis.html  genindex.html  index.html  search.html
v0.1.5/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js  user_guide.html
v0.2.0/: .buildinfo  apis.html  genindex.html  searchindex.js
v1.0.1/: .buildinfo  apis.html  index.html  objects.inv  searchindex.js
(+48 files in other folders)
