[metadata]
name = pycorese
version = 0.0
author =
author_email = corese@inria.fr
description = python wrapper to the corese java library
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
licence = MIT
url = https://gitub.com/corese-stack/corese-python
project_urls =
    Homepage = https://corese-stack.github.io/corese-core/
classifiers =
    License :: OSI Approved :: CeCILL-C License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
python_requires = >= 3.8
zip_safe = False
install_requires =
    pandas
    py4j
    jpype1

[options.packages.find]
where=src

# [options.extras_require]
# dev =
#     pytest
#     pre-commit
#     pylint
#     coverage
